# ai-lab-portal

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  SPEC.md  compose.yaml  harness-benchmark-baseline.json  harness-benchmark-latest.json  pyproject.toml  render.yaml  test-post.md
.github/workflows/: ci-cd.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  Dockerfile  __init__.py
backend/app/: admin_boundary.py  ai_runs.py  (+40 more)
docs/: ARCHITECTURE.md  HARNESS_BACKLOG.md  HARNESS_COMPONENTS.md  HARNESS_MATURITY.md  README.md  STREAMING.md  TEST_MATRIX.md  TRACE_SPEC.md  architecture-diagram.html  benchmark-protocol.md  benchmark-report.html  coverage-audit.md  docker-deployment.md  implementation-skills.md  local-dev.md  local-development.md  self-improvement-protocol.md  verification-protocol.md
frontend/: .dockerignore  .env.example  Dockerfile  doctor.config.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  rd.json  tsconfig.json
scripts/: README.md  backlog_review.py  benchmark_streaming.py  ci-wait-for-services.py  deploy_smoke.py  dev.cjs  dev.sh  docker-env-smoke.sh  dogfood_blog_agent.py  drift_detector.py  e2e-flakiness-check.bat  e2e-preflight.bat  e2e-preflight.sh  harness_benchmark.py  harness_benchmark_compare.py  prepare-e2e-docker.ps1  seed-two-blog-posts.py  setup-git-hooks.mjs  test_pipeline.py  trace_quality.py  trace_update.py  validate_foundation.py  verify_all_stories.py
styles/: DESIGN.md  css-variable.md  design-token.md  tailwindv4.md
(+440 files in other folders)
