[project]
name = "ai-lab-portal"
version = "0.1.0"
description = "AI Lab Portal foundation services"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "celery[redis]>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.68,<3.0",
  "openai-agents>=0.14,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.0,<3.0",
  "email-validator>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
